--- a/exercism/lgo/Go_By_Example.ipynb
+++ b/exercism/lgo/Go_By_Example.ipynb
@@ -3683,6 +3683,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "/file_exists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true <nil>\n",
+      "11\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import (\n",
+    "    \"fmt\"\n",
+    "    \"os\"\n",
+    ")\n",
+    "// exists returns whether the given file or directory exists\n",
+    "func exists(path string) (bool, error) {\n",
+    "    _, err := os.Stat(path)\n",
+    "    if err == nil { return true, nil }\n",
+    "    if os.IsNotExist(err) { return false, nil }\n",
+    "    return true, err\n",
+    "}\n",
+    "\n",
+    "fmt.Println(exists(\"Go_By_Example.ipynb\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "https://gobyexample.com/defer"
    ]
   },
