--- a/exercism/lgo/exercism-go.ipynb
+++ b/exercism/lgo/exercism-go.ipynb
@@ -1606,6 +1606,544 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "random number generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import \"time\"\n",
+    "import \"fmt\"\n",
+    "import \"math/rand\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2,92\n",
+      "1\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Print(rand.Intn(100), \",\")\n",
+    "fmt.Print(rand.Intn(100))\n",
+    "fmt.Println()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(rand.Intn(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "590,221\n",
+      "1\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 := rand.NewSource(time.Now().UnixNano())\n",
+    "r1 := rand.New(s1)\n",
+    "\n",
+    "// Call the resulting `rand.Rand` just like the\n",
+    "// functions on the `rand` package.\n",
+    "fmt.Println(r1.Intn(1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n",
+      "3\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println('Z')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import (\n",
+    "    \"fmt\"\n",
+    "    \"time\"\n",
+    "    \"math/rand\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rand.Seed(time.Now().UnixNano())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "786\n",
+      "4\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(rand.Intn(1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "061\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Sprintf(\"%03d\",rand.Intn(1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74\n",
+      "3\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(rand.Intn(26)+'A')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var str [3]int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str[0] = rand.Intn(26)+'A'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str[1] = rand.Intn(26)+'A'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str[2] = rand.Intn(1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[75 90 960]\n"
+     ]
+    }
+   ],
+   "source": [
+    "str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SD131\n",
+      "6\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(string(rand.Intn(26)+'A')+string(rand.Intn(26)+'A')+fmt.Sprintf(\"%03d\",rand.Intn(1000)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "func Name() string {\n",
+    "    rand.Seed(time.Now().UnixNano())\n",
+    "    return string(rand.Intn(26)+'A')+string(rand.Intn(26)+'A')+fmt.Sprintf(\"%03d\",rand.Intn(1000))\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AE316\n",
+      "6\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(Name())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import \"os\"\n",
+    "// exists returns whether the given file or directory exists\n",
+    "func exists(path string) (bool, error) {\n",
+    "    _, err := os.Stat(path)\n",
+    "    if err == nil { return true, nil }\n",
+    "    if os.IsNotExist(err) { return false, nil }\n",
+    "    return true, err\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true <nil>\n",
+      "11\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(exists(\"Go_By_Example.ipynb\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Robot Name exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import (\n",
+    "\t\"fmt\"\n",
+    "\t\"math/rand\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Robot is type for robot\n",
+    "type Robot struct {\n",
+    "\tname string\n",
+    "}\n",
+    "\n",
+    "func genName() string {\n",
+    "    return string(rand.Intn(26)+'A') + string(rand.Intn(26)+'A') + fmt.Sprintf(\"%03d\", rand.Intn(1000))\n",
+    "}\n",
+    "// Name gives robot a name\n",
+    "func (r *Robot) Name() (string, error) {\n",
+    "\tif r.name == \"\" {\n",
+    "\t\tr.name = genName()\n",
+    "\t}\n",
+    "\treturn r.name, nil\n",
+    "}\n",
+    "\n",
+    "func (r *Robot) Reset() (string, error) {\n",
+    "\tif r.name != \"\" {\n",
+    "\t\tfmt.Println(\"old name: \", r.name)\n",
+    "\t}\n",
+    "    r.name = genName()\n",
+    "\treturn r.name, nil\n",
+    "}\n",
+    "\n",
+    "func (r *Robot) GetName() string {\n",
+    "\treturn r.name\n",
+    "}\n",
+    "\n",
+    "func (r *Robot) SetName(name string) {\n",
+    "    r.name = name\n",
+    "}\n",
+    "\n",
+    "\n",
+    "func New() *Robot { return new(Robot) }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r := New()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.name = \"Hello\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "&{Hello}\n",
+      "9\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello <nil>\n",
+      "12\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(r.Name())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "old name:  Hello\n",
+      "TP193 <nil>\n",
+      "12\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(r.Reset())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TP193\n",
+      "6\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(r.GetName())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1:13: r.SetName(\"Hello\") (no value) used as value\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(r.SetName(\"Hello\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n2, _ := r.Name()\n",
+    "n3, _ := r.Reset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EJ218 IR228 TT039\n",
+      "18\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmt.Println(n1,n2, n3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "&{}\n",
+      "4\n",
+      "<nil>\n"
+     ]
+    }
+   ],
+   "source": [
+    "r := New()\n",
+    "fmt.Println(r)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
