--- a/exercism/lgo/exercism-go.ipynb
+++ b/exercism/lgo/exercism-go.ipynb
@@ -1955,6 +1955,7 @@
     "    return string(rand.Intn(26)+'A') + string(rand.Intn(26)+'A') + fmt.Sprintf(\"%03d\", rand.Intn(1000))\n",
     "}\n",
     "// Name gives robot a name\n",
+    "// to update r.name, need to use pointer\n",
     "func (r *Robot) Name() (string, error) {\n",
     "\tif r.name == \"\" {\n",
     "\t\tr.name = genName()\n",
